feat: url shortener

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,6 @@
 [build]
 publish = "public"
+
+[context.dev.environment]
+MONGO_URI = "mongodb://localhost:27017/express"
+DATABASE_URL = "postgresql://postgres:password@localhost:5432/igdb"
