--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@netlify/functions": "^1.4.0"
+    "@netlify/functions": "^1.4.0",
+    "mongoose": "^6.8.2"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18"
   }
 }
