--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@netlify/functions": "^1.4.0",
+    "busboy": "^1.6.0",
     "mongoose": "^6.8.2"
   },
   "devDependencies": {
+    "@types/busboy": "^1.5.0",
     "@types/node": "^18.11.18"
   }
 }
