--- a/package.json
+++ b/package.json
@@ -11,18 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.3.0",
-    "@as-integrations/aws-lambda": "^1.1.0",
     "@netlify/functions": "^1.4.0",
-    "@prisma/client": "^4.8.1",
     "busboy": "^1.6.0",
     "form-data": "^4.0.0",
-    "graphql": "^16.6.0",
     "mailgun.js": "^8.0.6",
-    "mongoose": "^6.8.2",
-    "prisma": "^4.8.1"
+    "mongoose": "^6.9.2"
   },
   "devDependencies": {
     "@types/busboy": "^1.5.0",
-    "@types/node": "^18.11.18"
+    "@types/node": "^18.14.0"
   }
 }
