--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,7 @@
 [build]
 publish = "public"
+[[headers]]
+# Define which paths this specific [[headers]] block will cover.
+for = "/*"
+[headers.values]
+Access-Control-Allow-Origin = "*"
